# Govlatinamerica_JL

./: .env_dir  .env_local  .env_remoto  .env_var  .gitignore  Pipfile  README.md  agenda.md  bd  diretorio.py  environment.yml  environment2.yml  environment3.yml  environment4.yml  html_template.py  main.py  noticias.md  pyproject.toml  referencias.js  requirements.txt  setup.py  tarefas.md
018/banco/: CIDADANIA.json
acesso_bd/: inserir_bd.py
brasil/mre/: mre.py
css/: style.css
diretorios/: README.md  diretorio.py
inserir_bd/: inserir_bd.py
internet_archive/: internet_archive.py
template/: README.md  Vamos falar de queimadas.html  consulta_json.py  db_artigo.json  html_base.py  pagina.html  pagina_html.py  style.css  test.html  teste_domonic.py  teste_yattag.py  yattag_template_html.py
template-html/: .env_var  diretorio.py  html_template.py
template-html/js/: referencia.js
template/html/: AMAZÔNIA EM CHAMAS.html  Artigo - A nossa Amazônia.html  E Viva a nossa Amazônia!.html  Em nome do bem comum.html  Limites e responsabilidades.html  O que os brasileiros esperam de suas Forças Armadas.html  Opinião e princípios.html  Vamos falar de queimadas.html
template_html/: .env_var  README.md  __init__.py  diretorio.py  html_template.py
template_html/css/: reset.css  style.css
template_html/diretorios/: diretorio.py
templates/: .env_dir  README.md
templates/acesso_bd/: inserir_bd.py
templates/coleta/: coleta.py
templates/diretorios/: diretorio.py
templates/internet_archive/: internet_archive.py
templates/template_html/: environment.yml  (+1 more)
(+1052 files in other folders)
