[tool.poetry]
name = "GOVLATINAMERICA"
version = "1"
description = ""
authors = ["JLMotta <darthmotta@gmail.com>"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.5.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
bs4 = "^0.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
